--- a/CrossTable.ipynb
+++ b/CrossTable.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "ae8be20a-d570-492f-9146-5afe3745c55b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "e4b17608-8a4f-4bb3-b4e4-1797b4d6457c",
    "metadata": {},
    "outputs": [
@@ -89,7 +98,7 @@
        "[(201806, 1), (201806, 3), (201806, 4), (201807, 4), (201808, 2), (201808, 4)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,6 +209,90 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "629d70fe-c756-46b5-a7cd-0b3c0e88aba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>course_id</th>\n",
+       "            <th>June</th>\n",
+       "            <th>July</th>\n",
+       "            <th>August</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>o</td>\n",
+       "            <td>x</td>\n",
+       "            <td>x</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>x</td>\n",
+       "            <td>x</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>o</td>\n",
+       "            <td>x</td>\n",
+       "            <td>x</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'o', 'x', 'x'),\n",
+       " (2, 'x', 'x', 'o'),\n",
+       " (3, 'o', 'x', 'x'),\n",
+       " (4, 'o', 'o', 'o')]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- case..endとsumを合わせる\n",
+    "select course_id,\n",
+    "    case when sum(case when month = '201806' then 1 else null end) = 1\n",
+    "        then 'o' else 'x'\n",
+    "    end as \"June\",\n",
+    "    case when sum(case when month = '201807' then 1 else null end) = 1\n",
+    "        then 'o' else 'x'\n",
+    "    end as \"July\",\n",
+    "    case when sum(case when month = '201808' then 1 else null end) = 1\n",
+    "        then 'o' else 'x'\n",
+    "    end as \"August\"\n",
+    "from OpenCourses as oc\n",
+    "group by oc.course_id\n",
+    "order by oc.course_id"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "304a5dd4-6594-4802-aaa1-1cf7a472077a",
    "metadata": {},
@@ -281,6 +374,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- existsと相関サブクエリ\n",
     "select distinct course_id,\n",
     "    case when exists (\n",
     "        select *\n",
@@ -371,6 +465,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- inを使う\n",
     "select oc1.course_id,\n",
     "    course_id in (\n",
     "    select course_id\n",
@@ -392,6 +487,101 @@
     "    from OpenCourses\n",
     "    order by course_id\n",
     ") as oc1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "8480b77f-b7c1-426b-9681-f10ae617b78e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>course_id</th>\n",
+       "            <th>June</th>\n",
+       "            <th>July</th>\n",
+       "            <th>August</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>o</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>o</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'o', None, None),\n",
+       " (2, None, None, 'o'),\n",
+       " (3, 'o', None, None),\n",
+       " (4, 'o', 'o', 'o')]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- where使わないでselectの中に相関サブクエリを書いてもできる:\n",
+    "select course_id,\n",
+    "    (\n",
+    "        select 'o'\n",
+    "        from OpenCourses as c1\n",
+    "        where c1.course_id = c2.course_id and\n",
+    "        month = '201806'\n",
+    "    ) as \"June\",\n",
+    "    (\n",
+    "        select 'o'\n",
+    "        from OpenCourses as c1\n",
+    "        where c1.course_id = c2.course_id and\n",
+    "        month = '201807'\n",
+    "    ) as \"July\",\n",
+    "    (\n",
+    "        select 'o'\n",
+    "        from OpenCourses as c1\n",
+    "        where c1.course_id = c2.course_id and\n",
+    "        month = '201808'\n",
+    "    ) as \"August\"\n",
+    "from (\n",
+    "    select distinct course_id\n",
+    "    from OpenCourses\n",
+    ") as c2\n",
+    "order by c2.course_id"
    ]
   },
   {
@@ -467,7 +657,7 @@
     "    \"June\",\n",
     "    \"July\",\n",
     "    \"August\"\n",
-    "-- course_id一覧を左側にもつ\n",
+    "-- 表側固定のクロス表を作る\n",
     "from (\n",
     "    select distinct course_id\n",
     "    from OpenCourses\n",
