improve AllNotNull.ipynb

--- a/AllNotNull.ipynb
+++ b/AllNotNull.ipynb
@@ -86,6 +86,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6409f392-488a-48d7-bff8-c896b813d711",
+   "metadata": {},
+   "source": [
+    "## やりたいこと\n",
+    "すべての生徒がsbmt_dateある(提出している)学部を見つける"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "id": "bf2eccee-853a-48ae-b26b-434a15ee11f3",
