add another solution in NotExists

--- a/NotExists.ipynb
+++ b/NotExists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "id": "4dc91060-7b2b-4b36-b53c-16ad23ecedda",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "id": "62ae604c-b48f-4fad-943a-6a4091feda49",
    "metadata": {},
    "outputs": [
@@ -45,6 +45,7 @@
      "output_type": "stream",
      "text": [
       "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "Done.\n",
       "Done.\n",
       "1 rows affected.\n",
       "1 rows affected.\n",
@@ -84,13 +85,14 @@
        "[]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "drop table if exists ArrayTbl2;\n",
     "CREATE TABLE ArrayTbl2\n",
     " (key   CHAR(1) NOT NULL,\n",
     "    i   INTEGER NOT NULL,\n",
@@ -238,6 +240,58 @@
     "group by key\n",
     "having max(val) = 1 and\n",
     "    min(val) = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "a6ea95c6-c982-457c-9106-717ab0d5309f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>key</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>C</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('C',)]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- select部で集合に対する条件を書く\n",
+    "select key\n",
+    "from (\n",
+    "    select key,\n",
+    "        case when max(val) = 1 and min(val) = 1 then 1 else 0 end as flag\n",
+    "    from ArrayTbl2\n",
+    "    group by key\n",
+    ") as tmp\n",
+    "where flag = 1"
    ]
   },
   {
