--- a/AllNotNull.ipynb
+++ b/AllNotNull.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 133,
    "id": "251cdae8-460c-4144-a5dc-0a28c27e7ecb",
    "metadata": {},
    "outputs": [
@@ -11,8 +11,7 @@
      "output_type": "stream",
      "text": [
       "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n",
-      "\u001b[33mThere's a new jupysql version available (0.10.2), you're running 0.7.2. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
+      "  %reload_ext sql\n"
      ]
     }
    ],
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 134,
    "id": "26f3e1ac-5314-42b3-be92-e0a353ff1b16",
    "metadata": {},
    "outputs": [
@@ -63,7 +62,7 @@
        "[]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,8 +249,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "fba4a797-9b06-48c8-bf2c-4e3ab68a663f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>dpt</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>経済学部</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>理学部</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('経済学部',), ('理学部',)]"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select distinct dpt\n",
+    "from (\n",
+    "    select dpt,sbmt_date,\n",
+    "        count(*) over (partition by dpt) as cnt_all,\n",
+    "        count(sbmt_date) over (partition by dpt) as cnt_not_null\n",
+    "    from Students\n",
+    ") as tmp\n",
+    "where cnt_all = cnt_not_null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf0f76ba-6240-461f-a3d0-ac2fa8691321",
    "metadata": {},
    "outputs": [],
    "source": []
