improve ExtractDuplicate.ipynb

--- a/ExtractDuplicate.ipynb
+++ b/ExtractDuplicate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "id": "242d242e-cafd-4f47-9280-76fbd6f489b6",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "id": "7f88cab2-289c-48bb-8b07-21fe736ea67a",
    "metadata": {},
    "outputs": [
@@ -136,13 +136,14 @@
        "[(2, 'みかん', 100), (3, 'みかん', 100)]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "-- 相関サブクエリを使う方法(その1)\n",
     "select *\n",
     "from Products p1\n",
     "where id < (\n",
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 41,
    "id": "059c7cdb-a1aa-4cf9-830d-82d513e99be1",
    "metadata": {},
    "outputs": [
@@ -196,13 +197,14 @@
        "[(2, 'みかん', 100), (3, 'みかん', 100)]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
+    "-- 相関サブクエリを使う方法(その2)\n",
     "select *\n",
     "from Products p1\n",
     "where exists (\n",
@@ -264,6 +266,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- exceptを使う\n",
     "select *\n",
     "from Products\n",
     "where id in (\n",
@@ -278,8 +281,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "6cd253fc-89b6-4d5f-be79-be75a71f8b7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "            <th>price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>みかん</td>\n",
+       "            <td>100</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>みかん</td>\n",
+       "            <td>100</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2, 'みかん', 100), (3, 'みかん', 100)]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- not inを使う\n",
+    "select *\n",
+    "from Products\n",
+    "where id not in (\n",
+    "    select max(id)\n",
+    "    from Products\n",
+    "    group by name, price\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a8c6a03-90d0-4282-ac22-b66bc99e1c4f",
    "metadata": {},
    "outputs": [],
    "source": []
