--- a/SetEqual.ipynb
+++ b/SetEqual.ipynb
@@ -102,6 +102,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cccac4eb-782c-46f9-9695-dd8cfc424222",
+   "metadata": {},
+   "source": [
+    "## やりたいこと\n",
+    "+ 各グループ(各店舗グループ)において、Itemsを全て持っている店舗を探す(集合 vs 集合)\n",
+    "  + (要求するitem) \\equal (店舗にあるitem)となる店舗(グループ名)を探せば良い"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "de580551-a458-43cc-8296-a25b156ef9ec",
