--- a/AggregateFilter.ipynb
+++ b/AggregateFilter.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "50d8c8f8-bd20-42aa-b01f-20779eaf684f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "70bc535f-acb8-4319-8d36-261f43d49fa2",
    "metadata": {},
    "outputs": [
@@ -117,7 +108,7 @@
        " (6, 'Takahashi', 35, '開発')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "d6d6e763-9d38-43bb-8b3f-9239f6175512",
    "metadata": {},
    "outputs": [
@@ -198,7 +189,7 @@
        "[(1, 'Sato', 23, '営業'), (6, 'Takahashi', 35, '開発')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,6 +268,140 @@
     "    select avg(age)\n",
     "    from employees as e2\n",
     "    where e1.department = e2.department\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f54ab16c-8ec3-4268-a0cf-3a6ca09b33aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "            <th>age</th>\n",
+       "            <th>department</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>Sato</td>\n",
+       "            <td>23</td>\n",
+       "            <td>営業</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>Takahashi</td>\n",
+       "            <td>35</td>\n",
+       "            <td>開発</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'Sato', 23, '営業'), (6, 'Takahashi', 35, '開発')]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- not existsを使う(極値関数使うよりもいまいち)\n",
+    "select *\n",
+    "from employees as e1\n",
+    "where not exists (\n",
+    "    select *\n",
+    "    from (\n",
+    "        select\n",
+    "            avg(age) as avg,\n",
+    "            department\n",
+    "        from employees\n",
+    "        group by department\n",
+    "    ) e3\n",
+    "    where e1.department = e3.department and\n",
+    "    e1.age >= e3.avg\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "54e8c98d-e0a1-43bf-995d-7eb63472d1f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>name</th>\n",
+       "            <th>age</th>\n",
+       "            <th>department</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>Saito</td>\n",
+       "            <td>38</td>\n",
+       "            <td>営業</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>Yamada</td>\n",
+       "            <td>42</td>\n",
+       "            <td>開発</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(3, 'Saito', 38, '営業'), (4, 'Yamada', 42, '開発')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- もし各グループごとのmaxの年齢の場合だとnot existsでスッキリする\n",
+    "select *\n",
+    "from employees as e1\n",
+    "where not exists (\n",
+    "    select *\n",
+    "    from employees as e2\n",
+    "    where e1.department = e2.department and\n",
+    "    e1.age < e2.age\n",
     ")"
    ]
   },
