add solution in crosstabulation

--- a/CrossTabulation.ipynb
+++ b/CrossTabulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "ae8be20a-d570-492f-9146-5afe3745c55b",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
+      "\u001b[33mThere's a new jupysql version available (0.10.2), you're running 0.7.2. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
      ]
     }
    ],
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "e4b17608-8a4f-4bb3-b4e4-1797b4d6457c",
    "metadata": {},
    "outputs": [
@@ -98,7 +97,7 @@
        "[(201806, 1), (201806, 3), (201806, 4), (201807, 4), (201808, 2), (201808, 4)]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +556,7 @@
    ],
    "source": [
     "%%sql\n",
-    "-- where使わないでselectの中に相関サブクエリを書いてもできる:\n",
+    "-- where使わないでselectの中に相関サブクエリ(スカラサブクエリ)を書いてもできる:\n",
     "select course_id,\n",
     "    (\n",
     "        select 'o'\n",
@@ -685,11 +684,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7202af57-db12-4e2b-950e-3a00ab3ff9e6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>course_id</th>\n",
+       "            <th>June</th>\n",
+       "            <th>July</th>\n",
+       "            <th>August</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>o</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>o</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'o', None, None),\n",
+       " (2, None, None, 'o'),\n",
+       " (3, 'o', None, None),\n",
+       " (4, 'o', 'o', 'o')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- left join onで\n",
+    "select oc1.course_id,\n",
+    "    case when oc2.course_id is not null then 'o' else null end as \"June\",\n",
+    "    case when oc3.course_id is not null then 'o' else null end as \"July\",\n",
+    "    case when oc4.course_id is not null then 'o' else null end as \"August\"\n",
+    "from (\n",
+    "    select distinct course_id\n",
+    "    from OpenCourses\n",
+    "    order by course_id\n",
+    ") as oc1\n",
+    "left join OpenCourses as oc2\n",
+    "on oc1.course_id = oc2.course_id and oc2.month = 201806\n",
+    "left join OpenCourses as oc3\n",
+    "on oc1.course_id = oc3.course_id and oc3.month = 201807\n",
+    "left join OpenCourses as oc4\n",
+    "on oc1.course_id = oc4.course_id and oc4.month = 201808"
+   ]
   },
   {
    "cell_type": "code",
