--- a/SecondBiggest.ipynb
+++ b/SecondBiggest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "id": "a98cc465-f3fe-4bd5-8a5c-e0b1df0740ec",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "id": "dc2af2f4-da42-4aec-8d42-777fc8e169c4",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "[]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,6 +87,152 @@
    "source": [
     "## やりたいこと\n",
     "+ 各グループで2番目に大きい要素を取得する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "562ea90d-2c7d-4177-b1e0-87cc372183ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>group_id</th>\n",
+       "            <th>value</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>1</td>\n",
+       "            <td>6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>2</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(3, 1, 6), (6, 2, 5)]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- cross joinでt1は最大、t2はt1をもとに2番目に大きいものに絞り込む\n",
+    "select t1.id,\n",
+    "    t1.group_id,\n",
+    "    t2.value\n",
+    "from tbl as t1, tbl as t2\n",
+    "where t1.group_id = t2.group_id and\n",
+    "t1.value = (\n",
+    "    select max(t3.value)\n",
+    "    from tbl as t3\n",
+    "    where t3.group_id = t1.group_id\n",
+    ") and\n",
+    "t2.value = (\n",
+    "    select max(t3.value)\n",
+    "    from tbl as t3\n",
+    "    where t3.group_id = t2.group_id and\n",
+    "    t3.value < t1.value\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "00f17a60-3d95-4fec-97ec-adcd82196bac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>max</th>\n",
+       "            <th>group_id</th>\n",
+       "            <th>max_1</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>1</td>\n",
+       "            <td>7</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>2</td>\n",
+       "            <td>10</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>2</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>3</td>\n",
+       "            <td>8</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2, 1, 6), (3, 1, 7), (6, 2, 10), (5, 2, 5), (7, 3, 8)]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- cross join\n",
+    "select\n",
+    "    max(t1.id),\n",
+    "    t1.group_id,\n",
+    "    max(t1.value)\n",
+    "from tbl as t1, tbl as t2\n",
+    "where t1.group_id = t2.group_id and\n",
+    "t1.value <= t2.value\n",
+    "group by t1.group_id, t1.value\n",
+    "having count(*) = 2"
    ]
   },
   {
@@ -152,6 +298,72 @@
     "        where t1.group_id = t3.group_id\n",
     "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "53e0190e-12f0-4dfb-8455-197edba10fe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>id</th>\n",
+       "            <th>group_id</th>\n",
+       "            <th>value</th>\n",
+       "            <th>second</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>1</td>\n",
+       "            <td>6</td>\n",
+       "            <td>6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>2</td>\n",
+       "            <td>5</td>\n",
+       "            <td>5</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(2, 1, 6, 6), (5, 2, 5, 5)]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- window関数\n",
+    "select *\n",
+    "from (\n",
+    "    select *,\n",
+    "        nth_value(value,2) over (\n",
+    "            partition by group_id\n",
+    "            order by value desc\n",
+    "        ) as second\n",
+    "    from tbl\n",
+    ") as tmp\n",
+    "where value = second"
    ]
   },
   {
@@ -229,197 +441,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "e104064a-c829-43a5-bfa7-d4849049f700",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
-      "2 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>id</th>\n",
-       "            <th>group_id</th>\n",
-       "            <th>value</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>2</td>\n",
-       "            <td>1</td>\n",
-       "            <td>6</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>5</td>\n",
-       "            <td>2</td>\n",
-       "            <td>5</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(2, 1, 6), (5, 2, 5)]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "-- inner join\n",
-    "select t1.id,\n",
-    "    min(t1.group_id) as group_id,\n",
-    "    min(t1.value) as value\n",
-    "from tbl as t1\n",
-    "inner join tbl t2\n",
-    "on t1.group_id = t2.group_id\n",
-    "and t1.value < t2.value\n",
-    "group by t1.id\n",
-    "having count(*) = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "885c972e-224b-4274-9b1b-b8c9cb6a714b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
-      "2 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>id</th>\n",
-       "            <th>min</th>\n",
-       "            <th>min_1</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>2</td>\n",
-       "            <td>1</td>\n",
-       "            <td>6</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>5</td>\n",
-       "            <td>2</td>\n",
-       "            <td>5</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(2, 1, 6), (5, 2, 5)]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "-- cross join\n",
-    "select t1.id,\n",
-    "    min(t1.group_id),\n",
-    "    min(t1.value)\n",
-    "from tbl as t1, tbl as t2\n",
-    "where t1.group_id = t2.group_id\n",
-    "and t1.value < t2.value\n",
-    "group by t1.id\n",
-    "having count(*) = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "53e0190e-12f0-4dfb-8455-197edba10fe0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
-      "2 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>id</th>\n",
-       "            <th>group_id</th>\n",
-       "            <th>value</th>\n",
-       "            <th>second</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>2</td>\n",
-       "            <td>1</td>\n",
-       "            <td>6</td>\n",
-       "            <td>6</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>5</td>\n",
-       "            <td>2</td>\n",
-       "            <td>5</td>\n",
-       "            <td>5</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(2, 1, 6, 6), (5, 2, 5, 5)]"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "-- window関数\n",
-    "select *\n",
-    "from (\n",
-    "    select *,\n",
-    "        nth_value(value,2) over (\n",
-    "            partition by group_id\n",
-    "            order by value desc\n",
-    "        ) as second\n",
-    "    from tbl\n",
-    ") as tmp\n",
-    "where value = second"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "86484215-4688-411a-bced-6f5715e53180",
+   "id": "1dd2995e-5fdd-45b1-a72c-8c36af4e98dc",
    "metadata": {},
    "outputs": [],
    "source": []
