--- a/AllNotNull.ipynb
+++ b/AllNotNull.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "id": "251cdae8-460c-4144-a5dc-0a28c27e7ecb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "id": "26f3e1ac-5314-42b3-be92-e0a353ff1b16",
    "metadata": {},
    "outputs": [
@@ -62,7 +53,7 @@
        "[]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +81,7 @@
    "metadata": {},
    "source": [
     "## やりたいこと\n",
-    "すべての生徒がsbmt_dateある(提出している)学部を見つける"
+    "各グループ(学部)について、すべての生徒が提出している(sbmt_dateある, 全てがnot nullである)学部を見つける"
    ]
   },
   {
@@ -237,6 +228,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- 相関サブクエリ + not existsを使う方法\n",
     "select distinct dpt\n",
     "from students as s1\n",
     "where not exists (\n",
@@ -303,8 +295,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cf0f76ba-6240-461f-a3d0-ac2fa8691321",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>dpt</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>理学部</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>経済学部</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('理学部',), ('経済学部',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select distinct dpt\n",
+    "from Students\n",
+    "except\n",
+    "select distinct dpt\n",
+    "from Students\n",
+    "where sbmt_date is null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac880a76-41ad-4f11-8a4d-4656cdc5c8e9",
    "metadata": {},
    "outputs": [],
    "source": []
