add another solution in Subset

--- a/Subset.ipynb
+++ b/Subset.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "1f39ec3a-4d9c-40f8-bd46-e9eca9ffce9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql\n",
     "import os\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "e702fc8e-f004-45a1-89f9-209e71087484",
    "metadata": {},
    "outputs": [
@@ -69,7 +60,7 @@
        "[]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,6 +161,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "3f25cd08-82db-452c-9692-176b0505f9b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>shop</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>仙台</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>東京</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('仙台',), ('東京',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- 相関サブクエリのnot exists入れ子\n",
+    "select distinct shop\n",
+    "from ShopItems as si1\n",
+    "where not exists (\n",
+    "    select *\n",
+    "    from items as it\n",
+    "    where not exists (\n",
+    "        select *\n",
+    "        from ShopItems as si2\n",
+    "        where it.item = si2.item and\n",
+    "        si1.shop = si2.shop\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "8ac64968-bb13-4f1f-b06e-7c7eb9191da3",
    "metadata": {},
@@ -212,7 +262,7 @@
    ],
    "source": [
     "%%sql\n",
-    "-- 相関サブクエリを利用\n",
+    "-- 相関サブクエリ(中身はleft join)\n",
     "select distinct shop\n",
     "from ShopItems si1\n",
     "where not exists (\n",
