another solution in CrossTabulation.ipynb

--- a/CrossTabulation.ipynb
+++ b/CrossTabulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "ae8be20a-d570-492f-9146-5afe3745c55b",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mThere's a new jupysql version available (0.10.2), you're running 0.7.2. To upgrade: pip install jupysql --upgrade\u001b[0m\n"
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
      ]
     }
    ],
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "e4b17608-8a4f-4bb3-b4e4-1797b4d6457c",
    "metadata": {},
    "outputs": [
@@ -97,7 +98,7 @@
        "[(201806, 1), (201806, 3), (201806, 4), (201807, 4), (201808, 2), (201808, 4)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,6 +199,7 @@
    ],
    "source": [
     "%%sql\n",
+    "-- これがひとまずベスト\n",
     "select course_id,\n",
     "    min(case when month=201806 then 'o' else 'x' end) as \"June\",\n",
     "    min(case when month=201807 then 'o' else 'x' end) as \"July\",\n",
@@ -684,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "7202af57-db12-4e2b-950e-3a00ab3ff9e6",
    "metadata": {},
    "outputs": [
@@ -743,7 +745,7 @@
        " (4, 'o', 'o', 'o')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,8 +772,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "id": "aa6a3163-0442-4f2b-b91e-441f28511347",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>course_id</th>\n",
+       "            <th>June</th>\n",
+       "            <th>July</th>\n",
+       "            <th>August</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>o</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>o</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'o', None, None),\n",
+       " (2, None, None, 'o'),\n",
+       " (3, 'o', None, None),\n",
+       " (4, 'o', 'o', 'o')]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- unionを使用する\n",
+    "select course_id,\n",
+    "    case when max(c2_id) is not null then 'o' else null end as \"June\",\n",
+    "    case when max(c3_id) is not null then 'o' else null end as \"July\",\n",
+    "    case when max(c4_id) is not null then 'o' else null end as \"August\"\n",
+    "from (\n",
+    "    select course_id, course_id, NULL, cast(NULL as integer)\n",
+    "    from OpenCourses as oc\n",
+    "    where oc.month = 201806\n",
+    "    union all\n",
+    "    select course_id, NULL, course_id, NULL\n",
+    "    from OpenCourses as oc\n",
+    "    where oc.month = 201807\n",
+    "    union all\n",
+    "    select course_id, NULL, NULL, course_id\n",
+    "    from OpenCourses as oc\n",
+    "    where oc.month = 201808\n",
+    ") as tmp(course_id, c2_id, c3_id, c4_id)\n",
+    "group by course_id\n",
+    "order by course_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "b15cbbb8-9847-4e69-b984-57390b121ecc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*  postgresql://padawan:***@db:5432/dsdojo_db\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>course_id</th>\n",
+       "            <th>max</th>\n",
+       "            <th>max_1</th>\n",
+       "            <th>max_2</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>o</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>o</td>\n",
+       "            <td>None</td>\n",
+       "            <td>None</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "            <td>o</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'o', None, None),\n",
+       " (2, None, None, 'o'),\n",
+       " (3, 'o', None, None),\n",
+       " (4, 'o', 'o', 'o')]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "-- 外部結合を使って\n",
+    "select course_id, max(June), max(July), max(August)\n",
+    "from (\n",
+    "    select distinct oc1.course_id,\n",
+    "        case when oc2.course_id = oc1.course_id then 'o' else null end,\n",
+    "        case when oc3.course_id = oc1.course_id then 'o' else null end,\n",
+    "        case when oc4.course_id = oc1.course_id then 'o' else null end\n",
+    "    from OpenCourses as oc1, OpenCourses as oc2, OpenCourses as oc3, OpenCourses as oc4\n",
+    "    where oc2.month = 201806 and\n",
+    "    oc3.month = 201807 and\n",
+    "    oc4.month = 201808\n",
+    ") as tmp(course_id, June, July, August)\n",
+    "group by course_id\n",
+    "order by course_id"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e343ec95-61f1-4328-af62-659a4cb47e5a",
+   "id": "9fa1a8e3-f43d-49b8-825e-b6967496a926",
    "metadata": {},
    "outputs": [],
    "source": []
